load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//build_defs/docker:go_oci_image.bzl", "go_oci_image")

go_library(
    name = "server_lib",
    srcs = [
        "embedder_select.go",
        "eventbus_autopilot.go",
        "eventbus_loop.go",
        "eventbus_perpetual.go",
        "eventbus_pod.go",
        "eventbus_relay.go",
        "eventbus_runner.go",
        "eventbus_setup.go",
        "grpc_init.go",
        "infra_init.go",
        "main.go",
        "main_startup.go",
        "notif_dedup.go",
        "relay_init.go",
        "server.go",
        "services_init.go",
        "services_init_helpers.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/backend/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/internal/api/grpc",
        "//backend/internal/api/rest",
        "//backend/internal/api/rest/v1:rest",
        "//backend/internal/config",
        "//backend/internal/domain/agentpod",
        "//backend/internal/domain/extension",
        "//backend/internal/domain/notification",
        "//backend/internal/domain/runner",
        "//backend/internal/infra",
        "//backend/internal/infra/acme",
        "//backend/internal/infra/blockstore",
        "//backend/internal/infra/database",
        "//backend/internal/infra/dns",
        "//backend/internal/infra/email",
        "//backend/internal/infra/eventbus",
        "//backend/internal/infra/logger",
        "//backend/internal/infra/otel",
        "//backend/internal/infra/pki",
        "//backend/internal/infra/storage",
        "//backend/internal/infra/websocket",
        "//backend/internal/interfaces",
        "//backend/internal/job",
        "//backend/internal/service/agent",
        "//backend/internal/service/agentpod",
        "//backend/internal/service/apikey",
        "//backend/internal/service/auth",
        "//backend/internal/service/billing",
        "//backend/internal/service/binding",
        "//backend/internal/service/blockstore",
        "//backend/internal/service/channel",
        "//backend/internal/service/extension",
        "//backend/internal/service/file",
        "//backend/internal/service/geo",
        "//backend/internal/service/instance",
        "//backend/internal/service/invitation",
        "//backend/internal/service/license",
        "//backend/internal/service/loop",
        "//backend/internal/service/mesh",
        "//backend/internal/service/notification",
        "//backend/internal/service/organization",
        "//backend/internal/service/promocode",
        "//backend/internal/service/relay",
        "//backend/internal/service/repository",
        "//backend/internal/service/runner",
        "//backend/internal/service/runnerlog",
        "//backend/internal/service/sso",
        "//backend/internal/service/supportticket",
        "//backend/internal/service/ticket",
        "//backend/internal/service/tokenusage",
        "//backend/internal/service/user",
        "//backend/pkg/crypto",
        "//proto/gen/go/runner/v1:runner",
        "@com_github_redis_go_redis_extra_redisotel_v9//:redisotel",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_gorm//:gorm",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = [
        "grpc_init_test.go",
        "notif_dedup_test.go",
    ],
    embed = [":server_lib"],
    deps = [
        "//backend/internal/config",
        "@com_github_stretchr_testify//assert",
    ],
)

# Produces a distroless OCI image and a local-load tarball;
# `bazel run :image_push --stamp --embed_label=<sha>` publishes to the
# registry in release workflows.
go_oci_image(
    name = "image",
    binary = ":server",
    exposed_ports = [
        "8080/tcp",
        "9443/tcp",
    ],
    repositories = {
        "agentsmesh": "registry.agentsmesh.ai/agentsmesh/backend",
        "corp": "registry.corp.agentsmesh.ai/agentsmesh/backend",
        "dockerhub": "agentsmesh/backend",
    },
)
