load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = ["base.go"],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":domain",
    visibility = ["//backend:__subpackages__"],
)

go_test(
    name = "domain_test",
    srcs = ["base_test.go"],
    embed = [":domain"],
)
